--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,7 @@
       </div>
       <div class="d-flex justify-content-center align-items-center">
         <button class="btn btn-primary mx-2 my-2" id="button-submit">SOLVE</button>
+        <button class="btn btn-secondary mx-2 my-2" id="button-clear">CLEAR</button>
       </div>
     </form>
     <!--Look at how to use branching for this-->
